<resources>
    <string name="app_name">UG - ST student</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">adufred7@gmail.com</string>
    <string name="firebase_password" translatable="false">script054</string>
    <string name="google_map_api_key">AIzaSyCqSpeqtLtPI0n50x-C7EDInOCVFJ_wvAI</string>
    <string name="app_logo">app_logo</string>
    <string name="ug_shuttle_tracker">UG SHUTTLE TRACKER</string>
    <string name="searched_location">searched location</string>
    <string name="alert">alert</string>
    <string name="shuttle">shuttle</string>
    <string name="shuttleimg">shuttleIMG</string>
    <string name="mapimg">mapIMG</string>
    <string name="alertimg">alertIMG</string>
    <string name="turn_on_alerts">Turn on alerts</string>
    <string name="select_when_u_want_to_receive_alerts">SELECT WHEN YOU WANT TO RECEIVE ALERTS</string>


</resources>
