<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_color"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff" />

    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        tools:context="inc.miracle.ug_ststudent.TrackingMap" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@drawable/layout_color"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="parent">



        <ImageView
            android:id="@+id/imageView2"
            android:onClick="shuttleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:src="@drawable/shuttle"
            android:contentDescription="@string/shuttleimg" />

        <ImageView
            android:id="@+id/imageView3"
            android:onClick="SearchedLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:src="@drawable/searched"
            android:contentDescription="@string/mapimg" />

        <ImageView
            android:id="@+id/imageView4"
            android:onClick="alertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:src="@drawable/alert"
            android:contentDescription="@string/alertimg"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp"
            android:text="@string/shuttle"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/searched_location"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/alert"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="302dp"
            tools:layout_editor_absoluteY="573dp" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>